fix: semantic structure in HTML fixed, li items added, addListItem used

--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet"> 
 </head>
 <body>
+  <header>
+  </header>
+  <main> 
   <ul class="pokemon-list">
-
   </ul>
+  </main>
+  <footer>
+  </footer>
   <script src="js/script.js"></script>
+  <script src="js/tota11y.min.js"></script>
 </body>
 </html>
