fix:design improved

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
   <header>
+    <img src="img/pokemonlogo.svg" alt="" class="logo">
   </header>
   <main> 
   <ul class="pokemon-list">
