feat. polyfill and promises added, API added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
   <header>
+    <img src="img/pokeballleft-01.svg" alt="" class="ball">
     <img src="img/pokemonlogo.svg" alt="" class="logo">
+    <img src="img/pokeballright-01.svg" alt="" class="ball">
   </header>
   <main> 
   <ul class="pokemon-list">
@@ -20,6 +22,8 @@
   </main>
   <footer>
   </footer>
+  <script src="js/polyfill.min.js"></script>
+  <script src="js/fetch.umd.js"></script>
   <script src="js/script.js"></script>
   <script src="js/tota11y.min.js"></script>
 </body>
