--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
     <img src="img/pokeballright-01.svg" alt="" class="ball">
   </header>
   <main> 
-  <ul class="pokemon-list">
-  </ul>
+    <div id="modal-container">
+    </div>
+    <ul class="pokemon-list">
+    </ul>
+ 
   </main>
   <footer>
   </footer>
