feat: footer added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
  
   </main>
   <footer>
+    <img src="img/pokeballleft-01.svg" alt="" class="footer-image">
+    <img src="img/pikachu-01.svg" alt="" class="footer-image">
+    <img src="img/pokeballright-01.svg" alt="" class="footer-image">
+    
+
+
   </footer>
   <script src="js/polyfill.min.js"></script>
   <script src="js/fetch.umd.js"></script>
