--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>My First JS App</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,25 +13,46 @@
 </head>
 <body>
   <header>
-    <img src="img/pokeballleft-01.svg" alt="" class="ball">
-    <img src="img/pokemonlogo.svg" alt="" class="logo">
-    <img src="img/pokeballright-01.svg" alt="" class="ball">
+    <div class="container">
+      <nav class="navbar">
+        <a class="navbar-brand" href="#">
+          <img src="img/pokeballleft-01.svg" alt="" class="ball">
+          <img src="img/pokemonlogo.svg" alt="" class="logo">
+          <img src="img/pokeballright-01.svg" alt="" class="ball">
+        </a>
+      </nav>
+    </div>
   </header>
   <main> 
-    <div id="modal-container">
-    </div>
-    <ul class="pokemon-list">
+    <ul class="list-group">
     </ul>
- 
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title" id="exampleModalLabel">Modal title</h1>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <img class="img-fluid pokemon-image"  alt="image of a Pokemon">
+            <p class="pokemon-height"></p>
+            <p class="pokemon-weight"></p>
+            <p class="pokemon-types"></p>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
   <footer>
     <img src="img/pokeballleft-01.svg" alt="" class="footer-image">
     <img src="img/pikachu-01.svg" alt="" class="footer-image">
     <img src="img/pokeballright-01.svg" alt="" class="footer-image">
-    
-
-
   </footer>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="js/polyfill.min.js"></script>
   <script src="js/fetch.umd.js"></script>
   <script src="js/script.js"></script>
