feat: implementing search/filter

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             <img src="img/pokemonlogo.svg" alt="" class="logo" />
             <img src="img/pokeballright-01.svg" alt="" class="ball" />
           </a>
+          <input
+            type="text"
+            id="myInput"
+            onkeyup="filterSearch()"
+            placeholder="Search for pokemon..." />
         </nav>
       </div>
     </header>
@@ -81,7 +86,7 @@
       crossorigin="anonymous"></script>
     <script src="src/js/polyfill.min.js"></script>
     <script src="src/js/fetch.umd.js"></script>
-    <script src="dist/script.min.js"></script>
+    <script src="src/js/script.js"></script>
     <script src="src/js/tota11y.min.js"></script>
   </body>
 </html>
