feat:simplepagination.js added

--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
       <div class="inputdiv">
         <input type="text" id="myInput" placeholder="Search for pokemon..." />
       </div>
-      <div id="data-container"></div>
-      <div id="pagination-container">
+      <div class="data-container" id="data-container">
         <ul class="list-group" id="pokeList"></ul>
       </div>
-
+      <div id="pagination-container"></div>
       <div
         class="modal fade"
         id="myModal"
@@ -88,7 +87,8 @@
       crossorigin="anonymous"></script>
     <script src="src/js/polyfill.min.js"></script>
     <script src="src/js/fetch.umd.js"></script>
-    <script src="src/js/pagination.js"></script>
+    <!-- <script src="src/js/pagination.js"></script> -->
+    <script src="src/js/jquery.simplePagination.js"></script>
     <script src="src/js/script.js"></script>
     <script src="src/js/tota11y.min.js"></script>
   </body>
